# poetry-demo

./: .gitignore  pyproject.toml  text.txt
poetry_demo/: app.py  euler.py
tests/: test_poetry_demo.py
