[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["marco tosini"]

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^2.1.2"
coo = "^0.1.3"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
